--- a/SafrDubai/templates/form.html
+++ b/SafrDubai/templates/form.html
@@ -4,8 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename="css/form.css") }}">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=twitter:card content=summary_large_image>
-<link type=image/x-icon rel="shortcut icon"
-      href="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+<title>Plan Your Journey - SafrDubai</title>
 <style>.sf-hidden {
     display: none !important
 }</style>
@@ -32,7 +31,7 @@
                             <h4 class="journeyplanner-heading journeyplanner-heading-yse5xw48"><span><p>Enter the required details.</p>
 </span></h4>
                         </div>
-                        <form method="post" action="#" autocomplete="off" id=r31ryq64 class=journeyplanner-inputForm-r31ryq64>
+                        <form method="post" action="" autocomplete="off" id=r31ryq64 class=journeyplanner-inputForm-r31ryq64>
                             {{ csrf_token }}
                             <div class=fields-wrapper>
                                 <div class=form-group><label>Starting Address</label><input type=text name="starting"
