--- a/SafrDubai/static/css/form.css
+++ b/SafrDubai/static/css/form.css
@@ -1,3 +1,71 @@
+.autocomplete-container {
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex;
+  position: relative;
+}
+
+.input-container input {
+  flex: 1;
+  outline: none;
+
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  padding-right: 31px;
+  font-size: 16px;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
+  border-top: none;
+  background-color: #fff;
+
+  z-index: 99;
+  top: calc(100% + 2px);
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.autocomplete-items .autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.clear-button {
+  color: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+
+  position: absolute;
+  right: 5px;
+  top: 0;
+
+  height: 100%;
+  display: none;
+  align-items: center;
+}
+
+.clear-button.visible {
+  display: flex;
+}
+
+.clear-button:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%
@@ -309,7 +377,7 @@ h4 {
 
 .journeyplanner-inputForm-r31ryq64 {
     background-repeat: no-repeat;
-    border-radius: 31px 31px 31px 31px
+    border-radius: 5px;
 }
 
 .journeyplanner-inputForm-r31ryq64 .form-button {
@@ -326,7 +394,7 @@ h4 {
     padding-top: 10px;
     padding-bottom: 10px;
     border: 2px solid #DDDDDD;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 5px;
     background-color: #FFFFFF;
     margin-bottom: 15px
 }
