--- a/SafrDubai/static/css/style.css
+++ b/SafrDubai/static/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
 body {
     height: 100vh;
@@ -33,4 +34,22 @@ body {
 
 .box-wrapper h1 {
     font-family: 'Montserrat', sans-serif;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #1d4392;
+}
+
+ul li {
+    border: 1px solid rgba(0,0,0,0.4);
+    width: 100%;
+    height: 50px;
+    font-family: 'Rubik', sans-serif;
+    list-style: none;
+    vertical-align: center;
+}
+
+ul {
+    height: 2000px;
 }
