--- a/SafrDubai/templates/transit.html
+++ b/SafrDubai/templates/transit.html
@@ -2,22 +2,57 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<!--===============================================================================================-->
     <title>Route - SafrDubai</title>
 </head>
 <body>
 <section class="wrapper">
-    <div class="wrapper-inner">
-        <div class="box-wrapper">
-            <h1>Route:</h1>
-            <ul>
-                {% for item in route["routes"][0]["sections"] %}
-                    <li><a target="_blank" href="https://maps.google.com/?q={{ item["arrival"]["place"]["location"]["lat"] }},{{ item["arrival"]["place"]["location"]["lng"] }}">Location Map: </a>{{ item["arrival"]["place"]["name"] }} {{ item["arrival"]["time"] }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
+    	<div class="limiter">
+		<div class="container-table100">
+			<div class="wrap-table100">
+				<div class="table100 ver1 m-b-110">
+					<div class="table100-head">
+						<table>
+							<thead>
+								<tr class="row100 head">
+									<th class="cell100 column1">Location</th>
+									<th class="cell100 column2">Type</th>
+									<th class="cell100 column3">Start Time</th>
+									<th class="cell100 column4">End Time</th>
+									<th class="cell100 column5">Location Link</th>
+								</tr>
+							</thead>
+						</table>
+					</div>
+
+					<div class="table100-body js-pscroll">
+						<table>
+							<tbody>
+								<tr class="row100 body">
+									<td class="cell100 column1">Chicken</td>
+									<td class="cell100 column2">Life</td>
+									<td class="cell100 column3">9:00AM</td>
+									<td class="cell100 column4">10 AM</td>
+									<td class="cell100 column5">Link</td>
+								</tr>
+                    </div>
 </section>
 </body>
 </html>
