--- a/SafrDubai/templates/form.html
+++ b/SafrDubai/templates/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<link rel=icon>
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename="favicon.ico") }}">
 <link rel="stylesheet" href="{{ url_for('static', filename="css/form.css") }}">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=twitter:card content=summary_large_image>
