--- a/SafrDubai/static/css/css/main.css
+++ b/SafrDubai/static/css/css/main.css
@@ -128,13 +128,17 @@ body{
 .limiter {
   width: 1366px;
   margin: 0 auto;
+  display: flex;
+  width: 1366px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 
 .container-table100 {
   width: 100%;
   min-height: 100vh;
   background: #fff;
-
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -143,7 +147,6 @@ body{
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 33px 30px;
 }
 
 .wrap-table100 {
