--- a/SafrDubai/templates/transit.html
+++ b/SafrDubai/templates/transit.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/vendor/perfect-scrollbar/perfect-scrollbar.css") }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/css/util.css") }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/css/main.css") }}">
-<!--===============================================================================================-->
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename="favicon.ico") }}">
     <title>Route - SafrDubai</title>
 </head>
 <body>
