--- a/SafrDubai/templates/form.html
+++ b/SafrDubai/templates/form.html
@@ -28,7 +28,7 @@
                 <div class=col-lg-1/1>
                     <div class="column-inner journeyplanner-column-qt2zbpc9 1/1">
                         <div class="journeyplanner-wrapper journeyplanner-heading-yse5xw48-wrapper">
-                            <h4 class="journeyplanner-heading journeyplanner-heading-yse5xw48"><span><p>Enter the required details.</p>
+                            <h4 class="journeyplanner-heading journeyplanner-heading-yse5xw48"><span><p>Please Enter the Exact Address of your starting and ending points.</p>
 </span></h4>
                         </div>
                         <form method="post" action="" autocomplete="off" id=r31ryq64 class=journeyplanner-inputForm-r31ryq64>
