--- a/SafrDubai/templates/transit.html
+++ b/SafrDubai/templates/transit.html
@@ -26,8 +26,8 @@
 								<tr class="row100 head">
 									<th class="cell100 column1">Location</th>
 									<th class="cell100 column2">Type</th>
-									<th class="cell100 column3">Start Time</th>
-									<th class="cell100 column4">End Time</th>
+									<th class="cell100 column3">Departure Time</th>
+									<th class="cell100 column4">Arrival Time</th>
                                     <th class="cell100 column5">Location Link</th>
 			                        <th class="cell100 column6">Transport ID</th>
                                 </tr>
